2A/05_Projet_GL/src/test/deca/syntax/valid/HelloWorld/10_printlnx.deca
// Description:
//    Programme avec printlnx simple.
//
// Resultats:
//    Un printlnx
//
// Historique:
//    cree le 20/12/2023

{
    printlnx("Un printlnx");
}